--- a/.gitignore
+++ b/.gitignore
@@ -327,4 +327,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,windows,linux
